added js navbar

--- a/index.html
+++ b/index.html
@@ -14,84 +14,116 @@
     />
 </head>
 <body>
-    <section id="heading content">
-        <div id="showcase">
-            <nav>
-                <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTArFpoPClUIDQagrM9ZXy4aWLeieNVgRxWFg&usqp=CAU" class="logo"> -->
-                <ul>
-                    <li><a href="#about-me">About Me</a></li>
-                    <li><a href="#i-do">What I Do</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="content-wrap">
-                <p>Dr.</p>
-                <h1>Abraham</h1>
-                <h1>Balona</h1>
+    <header>
+        <img src="images/IMG_2756.jpg" class="image-logo">
+        <a href="#" class="text-logo" aria-label="homepage">Dr. Abraham Balona</a>
+        <nav class="main-nav">
+            <ul class="nav__list">
+                <li class="nav__list-item">
+                    <a href="#" class="nav__link">Home</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#link" class="nav__link">What I Do</a>
+                </li>
+                <li class="nav__list-item">
+                    <a href="#contact-link" class="nav__link">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="heading content">
+            <div id="showcase">
+                <div class="content-wrap">
+                    <p>Dr.</p>
+                    <h1>Abraham</h1>
+                    <h1>Balona</h1>
+                    <h3>Obstetrician / Gynecologist</h3>
+                </div>
+                <img src="images/IMG_2756.jpg" class="logo">
             </div>
-            <img src="images/IMG_2756.jpg" class="logo">
-        </div>
-    </section>
-    <h5 class="styling-title" id="i-do">What I Do</h5>
-    <section id="what-i-do" class="grid">
-        <div id="i-do" class="box">
-            <h2 class="content-title">Obstetrician/Gynecologist</h2>
-            <h4 class="list-header">TREAT AND DIAGNOSE DISEASES OF THE FEMALE ORGANS</h4>
-            <p>A <strong>Obstetrician</strong> deals with all aspects of pregnancy, from prenatal care to post-natal
-                care. An obstetrician can also provide therapies to help you get pregnant,
-                such as fertility treatments.
-            </p>
-            <br>
-            <p>A <strong>Gynecologist</strong> is a doctor who specializes in female reproductive health.
-                They diagnose and treat issues related to the female reproductive tract.
-                This includes the uterus, fallopian tubes, and ovaries and breasts.
-            </p>
-            
-        </div>
-        <div class="box box-background">
-            <h4 class="list-header">OB/GYN SERVICES</h4>
-            <ul>
-                <li>Gynecological Evaluations</li>
-                <li>Menstruation Management</li>
-                <li>Birth Control Management</li>
-                <li>PAP Smear</li>
-                <li>Prenatal, Natal and Postnatal</li>
-                <li><strong>Laparoscopic</strong> Hysterectomy</li>
-                <li><strong>Laparoscopic</strong> Procedures</li>
-                <li>Ectopic Pregnancy</li>
-                <li>Tubal Ligation (Tie Off)</li>
-                <li>Ovarian Cysts</li>
-                <li>Uterine Fibroids</li>
-            </ul>
-        </div>
-        <div class="box">
-            <h2 class="content-title">Laparoscopic Bilateral Tubal Ligation</h2>
-            <p>COMMONLY REFERRED TO AS HAVING YOUR "TUBES TIED"</p>
-        </div>
-        <div class="box box-background">
-            <h4 class="list-header">INFORMATION ABOUT BLT</h4>
-            <ul>
-                <li>Same Day Discharge</li>
-                <li>Minimally Invasive</li>
-                <li>No Blood Donors Required</li>
-            </ul>
-        </div>
-    </section>
-    <section class="parallax">
-        <div class="inner-parallax">
-            <div class="quote-bar1"></div>
-            <h1 class="quote">YOU ARE A<br>PRIORITY!</h1>
-            <div class="quote-bar2"></div>
-        </div>
-    </section>
-    <footer id="contact">
-        <div class="contact-links icons">
-            <h6 id="contact-title">Contact</h6>
-            <!-- <a id="github-link" href="https://github.com/seanc21" target="_blank"> <i class="fab fa-2x fa-github"></i></a>
-            <a href="mailto:scoh21@basecampcodingacademy.org"><i class="fas fa-2x fa-envelope"></i></a>
-            <a id="linkedin" href="https://www.linkedin.com/in/sean-coh-873135200/" target="_blank"><i class="fab fa-2x fa-linkedin"></i></a> -->
-        </div>
-    </footer>
+            <div id="link" style="margin-bottom: 70px;"></div>
+        </section>
+        <h5 class="styling-title" id="i-do">What I Do</h5>
+        <section id="what-i-do" class="grid">
+            <div id="i-do" class="box">
+                <h2 class="content-title">Obstetrician / Gynecologist</h2>
+                <h4 class="list-header">TREAT AND DIAGNOSE DISEASES OF THE FEMALE ORGANS</h4>
+                <p>A <strong>Obstetrician</strong> deals with all aspects of pregnancy, from prenatal care to post-natal
+                    care. An obstetrician can also provide therapies to help you get pregnant,
+                    such as fertility treatments.
+                </p>
+                <br>
+                <p>A <strong>Gynecologist</strong> is a doctor who specializes in female reproductive health.
+                    They diagnose and treat issues related to the female reproductive tract.
+                    This includes the uterus, fallopian tubes, and ovaries and breasts.
+                </p>
+            </div>
+            <div class="box box-background">
+                <h4 class="list-header">OBGYN SERVICES</h4>
+                <ul>
+                    <li>Gynecological Evaluations</li>
+                    <li>Menstruation Management</li>
+                    <li>Birth Control Management</li>
+                    <li>PAP Smear</li>
+                    <li>Prenatal, Natal and Postnatal</li>
+                    <li><strong>Laparoscopic</strong> Hysterectomy</li>
+                    <li><strong>Laparoscopic</strong> Procedures</li>
+                    <li>Ectopic Pregnancy</li>
+                    <li>Tubal Ligation (Tie Off)</li>
+                    <li>Ovarian Cysts</li>
+                    <li>Uterine Fibroids</li>
+                </ul>
+            </div>
+            <div class="box">
+                <h2 class="content-title">Laparoscopic Bilateral Tubal Ligation</h2>
+                <p>COMMONLY REFERRED TO AS HAVING YOUR "TUBES TIED"</p>
+            </div>
+            <div class="box box-background">
+                <h4 class="list-header">INFORMATION ABOUT BTL</h4>
+                <ul>
+                    <li>Same Day Discharge</li>
+                    <li>Minimally Invasive</li>
+                    <li>No Blood Donors Required</li>
+                </ul>
+            </div>
+        </section>
+        <section class="parallax">
+            <div class="inner-parallax">
+                <div class="quote-bar1"></div>
+                <h1 class="quote">YOU ARE A<br>PRIORITY!</h1>
+                <div class="quote-bar2"></div>
+            </div>
+        </section>
+        <footer class="contact-bg">
+            <section id="contact-link" class="contact">
+                <div class="contact-title">How to Reach Me</div>
+                <div class="textwidget">
+                    <hr size="1">
+                    <p>
+                        <strong>Obstetrician/Gynecology &amp; Laparoscopic Bilateral Tubal Ligation</strong>
+                        <br>
+                        81 Ketz lagoon
+                        <br>
+                        Orange Walk Town, Belize
+                    </p>
+                    <h2><a href="tel:501-670-8930"><span class="phone-number">501-670-8930</span></a></h2>
+                    <div class="social-media">
+                        <a class="facebook" href="https://fontawesome.com/v5.15/icons/facebook-f" target="_blank" >
+                            <div class="facebook-button">
+                                <i class="fab fa-facebook-f"></i>
+                            </div>
+                        </a>
+                        <a class="email" href="https://fontawesome.com/v5.15/icons/facebook-f" target="_blank" >
+                            <div class="email-button">
+                                <i class="far fa-envelope"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </footer>
+    </main>
 </body>
 <script src="script.js"></script>
 </html>
