mobile version complete

--- a/index.html
+++ b/index.html
@@ -88,11 +88,15 @@
                 </ul>
             </div>
         </section>
-        <section class="parallax">
+        <section id="parallax-section" class="parallax">
             <div class="inner-parallax">
                 <div class="quote-bar1"></div>
                 <h1 class="quote">YOU ARE A<br>PRIORITY!</h1>
                 <div class="quote-bar2"></div>
+            </div>
+        </section>
+        <section id="mobile-parallax" class="image">
+            <div class="mobile">
             </div>
         </section>
         <footer class="contact-bg">
