viewport for different devices

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <p>
                         <strong>Obstetrician/Gynecology &amp; Laparoscopic Bilateral Tubal Ligation</strong>
                         <br>
-                        81 Ketz lagoon
+                        <i class="fas fa-map-marker-alt location"></i>81 Ketz lagoon
                         <br>
                         Orange Walk Town, Belize
                     </p>
@@ -123,6 +123,14 @@
                                 <i class="far fa-envelope"></i>
                             </div>
                         </a>
+                        <a class="phone" href="tel:501-670-8930" target="_blank" >
+                            <div class="phone-button">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="copyright">
+                        Copyright © 2021 Dr. Abraham Balona 
                     </div>
                 </div>
             </section>
