update facebook link

--- a/index.html
+++ b/index.html
@@ -113,12 +113,13 @@
                     </p>
                     <h2><a href="tel:501-670-8930"><span class="phone-number">501-670-8930</span></a></h2>
                     <div class="social-media">
-                        <a class="facebook" href="https://fontawesome.com/v5.15/icons/facebook-f" target="_blank" >
+                        <!-- fb://facewebmodal/f?href=https://it-it.facebook.com/abraham.balona/ Open for andriod -->
+                        <a class="facebook" href="https://www.facebook.com/abraham.balona" target="_blank">
                             <div class="facebook-button">
                                 <i class="fab fa-facebook-f"></i>
                             </div>
                         </a>
-                        <a class="email" href="https://fontawesome.com/v5.15/icons/facebook-f" target="_blank" >
+                        <a class="email" href="mailto:a_balona@yahoo.com" target="_blank" >
                             <div class="email-button">
                                 <i class="far fa-envelope"></i>
                             </div>
