--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
         crossorigin="anonymous"
     />
+    <link rel="icon" href="images/IMG_2756.jpg">
 </head>
 <body>
     <header>
